第11章 关联容器

--- a/第11章 关联容器.md
+++ b/第11章 关联容器.md
@@ -75,28 +75,1085 @@ while (cin >> word)
 
 `find` 的使用：`find` 调用返回一个迭代器。如果给定关键字在 `set` 中，迭代器指向该关键字。否则，`find` 返回尾后迭代器。
 
+**练习11.1：描述 `map` 和 `vector` 的不同。**
 
+学习关联容器，理解与顺序容器的不同，最关键的是理解其基础的数据结构，随后它所表现出来的一些性质就很自然能够理解了。
+
+两类容器的根本差别在于，顺序容器中的元素是“顺序”存储的（链表容器中的元素虽然不是在内存中“连续”存储的，但仍然是按“顺序”存储的）。理解“顺序”的关键，是理解容器支持的操作形式以及效率。
+
+对于 `vector` 这样的顺序容器，元素在其中按顺序存储，每个元素有唯一对应的位置编号，所有操作都是按编号（位置）进行的。例如，获取元素（头、尾、用 下标获取任意位置）、插入删除元素（头、尾、任意位置）、遍历元素（按元素位置顺序逐一访问）。**底层的数据结构是数组、链表**，简单但已能保证上述操作的高效。而对于依赖值的元素访问，例如查找（搜索）给定值(`find`)，在这种数据结构上的实现是要通过遍历完成的，效率不佳。
+
+而 `map` 这种关联容器，就是为了高效实现“按值访问元素”这类操作而设计的。为了达到这一目的，容器中的元素是按关键字值存储的，关键字值与元素数据建立起对应关系，这就是“关联”的含义。**底层数据结构是红黑树、哈希表等**，可高效实现按关键字值查找、添加、删除元素等操作。
+
+**练习11.2：分别给出最适合使用 `list`、`vector`、`deque`、`map` 以及 `set` 的例子。**
+
+若元素很小（例如 `int`），大致数量预先可知，在程序运行过程中不会剧烈变化，大部分情况下只在末尾添加或删除需要频繁访问任意位置的元素，则 `vector` 可带来最高的效率。若需要频繁在头部和尾部添加或删除元素，则 `deque` 是最好的选择。
+
+如果元素较大（如大的类对象），数量预先不知道，或是程序运行过程中频繁变化，对元素的访问更多是顺序访问全部或很多元素，则`list` 很适合。
+
+`map`很适合对一些对象按它们的某个特征进行访问的情形。典型的例如按学生的名字来查询学生信息，即可将学生名字作为关键字，将学生信息作为元素值，保存在 `map` 中。
+
+`set`，顾名思义，就是集合类型。当需要保存特定的值集合——通常是满足／不满足某种要求的值集合，用 `set` 最为方便。
+
+**练习11.3：编写你自己的单词计数程序。**
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <map>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+
+    map<string, size_t> word_count; // string 到 count 的映射
+    string word;
+    while (in >> word)
+        ++ word_count[word];        // 这个单词的出现次数加 1
+
+    for (const auto& w: word_count) // 对 map 中的每个元素
+        cout << w.first << "appears " << w.second << "times." << endl;
+    
+    return 0;
+}
+```
+
+**练习11.4：扩展你的程序，忽略大小写和标点。例如，`example.`、`example`，和 `Example`，应该递增相同的计数器。**
+
+解答：考察字符串处理。编写函数 `trans`，将单词中的标点去掉，将大写都转换为小写。
+具体方法是：遍历字符串，对每个字符首先检查是否是大写（ASCII 值在 $A$ 和 $Z$ 之间），
+若是，将其转换为小写（减去 `A`，加上 `a`）；否则，检查它是否带标点，若是，将其删除。
+最终，将转换好的字符串返回。
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <map>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+string& trans(string& s)
+{
+    for (int p = 0; p < s.size(); p++) {
+        if (s[p] > 'A' && s[p] <= 'Z') s[p] += 32;
+        else if (s[p] == ',' || s[p] == '.') s.erase(p, 1);
+    }
+    return s;
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Failes to open the file! " << endl;
+        exit(1);
+    }
+
+    map<string, size_t> word_count;
+    string word;
+    while (in >> word)
+        ++ word_count[trans(word)];
+    
+    for (const auto& w : word_count)
+        cout << w.first << "appears " << w.second << " times." << endl;
+    
+    return 0;
+}
+```
 
 ## 11.2 关联容器概述
 
+当初始化一个 `map` 时，必须提供关键字类型和值类型。我们将每个关键字-值对包围在花括号中：`{key, value}` 来指出它们一起构成了 `map` 中的一个元素。
+
+```cpp
+map<string, size_t> word_count; // 空容器
+// 列表初始化
+set<string> exclude = {"the", "but", "and", "or", "an", "a",
+                       "The", "But", "And", "Or", "An", "A"};
+// 三个元素；authors 将姓映射为名
+map<string, string> authors = {
+    {"Joyce", "James"},
+    {"Austen", "Jane"},
+    {"Dickens", "Charles"},
+}
+```
+
+### 初始化 multimap 或 multiset
+
+一个 `map` 或 `set` 中的关键字必须是唯一的，即，对于一个给定的关键字只能有一 个元素的关键字等于它。
+容器 `multimap` 和 `multiset` 没有此限制，它们都允许多个元素具有相同的关键字。
+
+**练习11.7：定义一个map，关键字是家庭的姓，值是一个 `vector`，保存家中孩子（们）的名。编写代码，实现添加新的家庭以及向已有家庭中添加新的孩子。**
+
+解答：此 `map` 的关键字类型是 `string`，值类型是 `vector<string>`。
+
+我们定义函数 `add_family` 添加一个家庭，注意，必须先检查是否已有这个家庭，若不做这个检查，则可能将己有家庭的孩子名字清空（如 `main` 函数中的王姓家庭的添加顺序）。若确实还没有这个家庭，则创建一个空的 `vecotr<string>`，表示这个家庭的孩子名字列表。
+
+函数 `add_child` 向一个己有家庭添加孩子的名字：首先用 `[]` 运算符取出该家庭的 `vector`，然后调用 `push_back` 将名字追加到 `vector` 末尾。
+
+```cpp
+#include <iostream>
+#include <map>
+#include <string>
+#include <vector>
+#include <algorithm>
+
+using namespace std;
+
+void add_family(map<string, vector<string>>& families, const string& family)
+{
+    if (families.find(family) == families.end())
+        families[family] = vector<string>();
+}
+
+void add_child(map<string, vector<string>>& families, const string& family, const string& child)
+{
+    families[family].push_back(child);
+}
+
+int main(int argc, char *argv[])
+{
+    map<string, vector<string>> families;
+
+    add_family(families, "Zhang");
+    add_child(families, "Zhang", "Qiang");
+    add_child(families, "Zhang", "Gang");
+    add_child(families, "Wang", "Five");
+    add_family(families, "Wang");
+
+    for (auto f : families) {
+        cout << f.first << " family's children are: ";
+        for (auto c : f.second)
+            cout << c << ", ";
+        cout << endl;
+    }
+
+    return 0;
+}
+
+/*
+Wang family's children are: Five, 
+Zhang family's children are: Qiang, Gang, 
+*/
+```
+
 ### 11.2.1 定义关联容器
+
+#### 初始化 multimap 或 multiset
+
+```cpp
+// 定义一个有 20 个元素的 vector，保存 0 到 9 每个整数的两个拷贝
+vector<int> ivec;
+for (vector<int>::size_type i = 0;i != 10; ++i) {
+    ivec.push_back(i);
+    ivec.push_back(i); // 每个数重复保存一次
+}
+// iset 包含来自 ivec 的不重复的元素；miset 包含所有 20 个元素
+set<int> iset(ivec.cbegin(), ivec.cend());
+multiset<int> miset(ivec.cbegin(), ivec.cend());
+cout << ivec.size() << endl; // 打印出20
+cout << iset.size() << endl; // 打印出10
+cout << miset.size() << endl;// 打印出20
+```
+
+**练习11.8：编写一个程序，在一个 `vector` 而不是一个 `set` 中保存不重复的单词。使用 `set` 的优点是什么？**
+
+解答：使用 `vector` 保存不重复单词，需要用 `find` 查找新读入的单词是否己在 `vector` 中，若不在（返回尾后迭代器），才将单词加入 `vector`。
+
+而使用 `set`，检查是否重复的工作是由 `set` 模板负责的，程序员无须编写对应代码，程序简洁很多。
+
+更深层次的差别，`vector` 是无序线性表，`find` 查找指定值只能采用顺序查找方式，所花费的时间与 `vector.size()` 呈线性关系。
+
+而 `set` 是用红黑树实现的， 花费的时间与 `vector.size()` 呈对数关系。当单词数量己经非常多时，`set` 的性能优势是巨大的。
+
+当然，`vector` 也不是毫无用处。它可以保持单词的输入顺序，而 `set` 则不能，遍历 `set`，元素是按值的升序被遍历的。
+
+**`vector`版本**
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+string& trans(string& s)
+{
+    for (int p = 0; p < s.size(); p++) {
+        if (s[p] >= 'A' && s[p] <= 'Z') s[p] += 32;
+        else if (s[p] == ',' || s[p] == '.') s.erase(p, 1);
+    }
+    return s;
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+
+    vector<string> unique_word;         // 不重复的单词
+    string word;
+    while (in >> word) {
+        trans(word);
+        if (find(unique_word.begin(), unique_word.end(), word) == unique_word.end())
+            unique_word.push_back(word);// 添加不重复单词
+    }
+
+    for (const auto& w : unique_word)   // 打印不重复单词
+        cout << w << " ";
+    cout << endl;
+
+    return 0;
+}
+```
+
+**`set`版本**
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <set>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+string& trans(string& s)
+{
+    for (int p = 0; p < s.size(); p++) {
+        if (s[p] >= 'A' && s[p] <= 'Z')  s[p] += 32;
+        else if (s[p] == ',' || s[p] == '.')  s.erase(p, 1);
+    }
+    return s;
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+
+    set<string> unique_word;    // 不重复的单词
+    string word;
+    while (in >> word) {
+        trans(word);
+        unique_word.insert(word);   // 添加不重复单词
+    }
+
+    for (const auto& w : unique_word) // 打印不重复单词
+        cout << w << " ";
+
+    cout << endl;
+
+    return 0;
+}
+```
 
 ### 11.2.2 关键字类型的要求
 
+#### 使用关键字类型的比较函数
+
+例如，我们不能直接定义一个 `Sales_data` 的 `multiset`，因为 `Sales_data` 没有 `<` 运算符。但是可以用 `compareIsbn` 函数来定义一个 `multiset`。此函数在 `Sales_data` 对象的 `ISBN` 成员上定义了一个严格弱序。函数 `compareIsbn` 应该如下定义：
+
+```cpp
+bool compareIsbn(const Sales_data& lhs, const Sales_data& rhs)
+{
+    return lhs.isbn() < rhs.isbn();
+}
+
+// bookstore 中多条记录可以有相同的 ISBN
+// bookstore 中的元素以 ISBN 的顺序进行排序
+multiset<Sales_data, decltype(compareIsbn)*> bookstore(compareIsbn);
+```
+
+此处，我们使用 `decltype` 来指出自定义操作的类型。
+记住，当用 `decltype` 来获得一个函数指针类型时，必须加上一个 `*` 来指出我们要使用一个给定函数类型的指针。（P223 因为当我们将 `decltype` 作用于某个函数时，它返回函数类型而非指针类型。因此，我们显式地加上 `*` 以表明我们需要返回指针，而非函数本身。）
+
+用 `compareIsbn` 来初始化 `bookstore` 对象，这表明当我们向 `bookstore` 添加元素时，通过调用 `compareIsbn` 来为这些元素排序。即，`bookstore` 中的元素将按它们的 `ISBN` 成员的值排序。
+可以用 `compareIsbn` 代替 `&compareIsbn` 作为构造函数的参数，因为当我们使用一个函数的名字时，在需要的情况下它会*自动转化为一个指针*。当然，使用 `&compareIsbn` 的效果也是一样的。
+
+**练习11.11：不使用 `decltype` 重新定义 bookstore。**
+
+解答：练习函数指针类型的定义。首先用 `typedef` 定义与 `compareIsbn` 相容的函数指针类型，然后用此类型声明 `multiset` 即可。
+
+```cpp
+typedef bool (*pf) (const Sales_data &, const Sales_data &);
+multiset<Sales_data, pf> bookstore(compareIsbn);
+```
+
+**练习11.9：定义一个 `map`，将单词与一个行号的 `list` 关联，`list` 中保存的是单词所出现的行号。**
+
+解答：`map` 的定义为：
+
+```cpp
+map<string, list<int>> word_lineno;
+```
+
+完整程序如下所示。其中用 `getline` 读取一行，统计行号。再用字符串流读取这行中所有单词，记录单词行号。
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <sstream>
+#include <map>
+#include <list>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+string& trans(string& s)
+{
+    for (int p = 0; p < s.size(); p++) {
+        if (s[p] >= 'A' && s[p] <= 'Z') s[p] += 32;
+        else if (s[p] == ',' || s[p] == '.')  s.erase(p, 1);
+    }
+    return s;
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+
+    map<string, list<int>> word_lineno; // 单词到行号的映射
+    string line;
+    string word;
+    int lineno = 0;
+    while (getline(in, line)) {     // 读取一行
+        lineno++;                   // 行号递增
+        istringstream l_in(line);   // 构造字符串流，读取单词
+        while (l_in >> word) {
+            trans(word);
+            word_lineno[word].push_back(lineno); // 添加行号
+        }
+    }
+
+    for (const auto& w : word_lineno) {
+        cout << w.first << " in line: ";
+        for (const auto& i : w.second)
+            cout << i << " ";
+        cout << endl;
+    }
+
+    return 0;
+}
+```
+
+**练习11.10：可以定义一个 `vector<int>::iterator` 到 `int` 的 `map` 吗？`list<int>::iterator` 到 `int` 的 `map` 呢？对于两种情况，如果不能，解释为什么。**
+
+解答：理解关联容器对关键字类型的要求。
+由于有序容器要求关键字类型必须支持比较操作 `<`，因此 `map<vector<int>::iterator, int> m1;` 是可以的，因为 `vector` 的迭代器支持比较操作。
+
+而 `map<list<int>::iterator, int> m2;` 是不行的，因为 `list` 的元素不是连续存储，其迭代器不支持比较操作。
+
 ### 11.2.3 pair类型
+
+头文件 `utility`
+
+一个 `pair` 保存两个数据成员。类似容器，`pair` 是一个用来生成特定类型的模板。
+当创建一个 `pair` 时，我们必须提供两个类型名，`pair` 的数据成员将具有对应的类型。
+
+```cpp
+pair<string, string> anon;      // 保存两个 string
+pair<string, size_t> word_count;// 保存一个 string 和一个 size_t
+pair<string, vector<int>> line; // 保存 string 和 vector<int>
+```
+
+也可以为每个成员提供初始化器：
+
+```cpp
+pair<string, string> author{"James", "Joyce"};
+```
+
+`pair` 的数据成员是 public 的，两个成员分别命名为 `first` 和 `second`。
+
+```cpp
+// 单词计数程序
+cout << w.first << " occurs " w.second << ((w.second > 1) ? " times" : " time") << endl;
+```
+
+| 表11.2：                    | `pair`上的操作                                               |
+| --------------------------- | ------------------------------------------------------------ |
+| `pair<T1, T2> p;`           | `p` 是一个 `pair`，两个类型分别为 `T1` 和`T2` 的成员都进行了值初始化 |
+| `pair<T1, T2> p(v1, v2);`   | `p` 是一个成员类型为 `T1` 和 `T2` 的 `pair`；`first` 和 `second` 成员分别用 `v1` 和 `v2` 进行初始化 |
+| `pair<T1,T2> p = {v1, v2};` | 等价于 `p(v1, v2)`                                           |
+| `make_pair(v1, v2)`         | 返回一个用 `v1` 和 `v2` 初始化的 `pair`。`pair` 的类型从 `v1` 和 `v2` 的类型推断出来 |
+| `p.first`                   | 返回 `p` 的名为 `first` 的（公有）数据成员                   |
+| `p.second`                  | 返回 `p` 的名为 `second` 的（公有）数据成员                  |
+| `p1 relop p2`               | 关系运算符（`<`、`>`、`<=`、`>=`）按字典序定义：例如，当 `p1.first < p2.first` 或 `!(p2.first < p1.first) && p1.second < p2.second` 成立时，`p1 < p2` 为 `true`。关系运算利用元素的 `<` 运算符来实现。 |
+| `p1 == p2`                  | 当 `first` 和 `second` 成员分别相等时，两个 `pair` 相等。相等性判断利用元素的 `==` 运算符实现 |
+| `p1 != p2`                  |                                                              |
+
+#### 创建 `pair` 对象的函数
+
+- 想象有一个函数需要返回一个 `pair`。若 `v` 不为空，我们返回一个由 `v` 中最后一个 `string` 及其大小组成的 `pair`。否则，隐式构造一个空 `pair`，并返回它。
+
+```cpp
+pair<string, int>
+process(vector<string>& v)
+{
+    // 处理 v
+    if (!v.empty())
+        return {v.back(), v.back().size()}; // 方法1：列表初始化，最简洁易懂
+    else
+        return pair<string, int>(); // 隐式构造返回值
+}
+```
+
+- 在较早的 C++ 版本中，不允许用花括号包围的初始化器来返回 `pair` 这种类型的对象，必须显式构造返回值：
+
+```cpp
+if (!v.empty())
+    return pair<string, int>(v.back(), v.back().size()); // 方法2
+```
+
+- 还可以用 `make_pair` 来生成 `pair` 对象，`pair` 的两个类型来自于 `make_pair` 参数：
+
+```cpp
+if (!v.empty())
+    return make_pair(v.back(), v.back().size()); // 方法3
+```
+
+**练习11.12：编写程序，读入 `string` 和 `int` 的序列，将每个 `string` 和 `int` 存入一个 `pair` 中，`pair` 保存在一个 `vector` 中。**
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <utility>
+#include <vector>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+
+    vector<pair<string, int>> data;
+    string s;
+    int v;
+    while (in >> s && in >> v)
+        data.push_back(pair<string, int>(s, v));
+        // 更简洁的列表初始化方式 data.push_back({s, v});
+        // 还可以用 make_pair： data.push_back(make_pair(s, v));
+    
+    for (const auto& d : data)
+        cout << d.first << " " << d.second << endl;
+    
+    return 0;
+}
+```
+
+**练习11.14：扩展你在11.2.1节练习(P378)中编写的孩子姓到名的`map`，添加一个`pair`的`vector`，保存孩子的名字和生日。**
+
+解答：在本题中，我们将家庭的姓映射到孩子信息的列表，而不是简单的孩子名字的列表。因此，将在 `vector` 中的元素类型声明为 `pair<string, string>`，两个 String 分别表示孩子的名字和生日。在添加孩子信息时，用**列表初始化**创建名字和生日的 `pair`，添加到 `vector` 中即可。
+
+```cpp
+#include <iostream>
+#include <map>
+#include <vector>
+#include <utility>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+void add_family(map<string, vector<pair<string, string>>>& families, const string& family)
+{
+    families[family];
+}
+
+void add_child(map<string, vector<pair<string, string>>>& families, const string& family, const string& child, const string& birthday)
+{
+    families[family].push_back({child, birthday}); //列表初始化创建名字和生日的pair
+}
+
+int main(int argc, char *argv[])
+{
+    map<string, vector<pair<string, string>>> families;
+
+    add_family(families, "Zhang");
+    add_child(families, "Zhang", "Qiang", "1970-1-1");
+    add_child(families, "Zhang", "Gang", "1980-1-1");
+    add_child(families, "Wang", "Five", "1990-1-1");
+    add_family(families, "Wang");
+
+    for (auto f : families) {
+        cout << f.first << "family's children: ";
+        for (auto c : f.second)
+            cout << c.first << "(birthday" << c.second << "), ";
+        cout << endl;
+    }
+
+    return 0;
+}
+```
 
 ## 11.3 关联容器操作
 
+| 表11.3：      | 关联容器额外的类型别名                                       |
+| ------------- | ------------------------------------------------------------ |
+| `key_type`    | 此容器类型的关键字类型                                       |
+| `mapped_type` | 每个关键字关联的类型；只适用于 `map`                         |
+| `value_type`  | - 对于 `set`，与 `key_type` 相同<br />对于 `map`，为 `pair<const key_type, mapped_type>` |
+
+`map` 中，每个元素是一个 `pair` 对象，包含一个关键字和一个关联的值。由于我们不能改变一个元素的关键字，因此这些 `pair` 的关键字部分是 `const` 的：
+
+```cpp
+set<string>::value_type v1;         // v1 是一个 string
+set<string>::key_type v2;           // v2 是一个 string
+map<string, int>::value_type v3;    // v3 是一个 pair<const string, int>
+map<string, int>::key_type v4;      // v4 是一个 string
+map<string, int>::mapped_type v5;   // v5 是一个 int
+```
+
+**练习11.15：对于一个 `int` 到 `vector<int>` 的 `map`，其 `mapped_type`、`key_type` 和 `value_type` 分别是什么？**
+
+- `mapped_type` 是 `vector<int>`。
+- `key_type` 是 `int`。
+- `value_type` 是 `pair<const int, vector<int>>`。
+
+与顺序容器一样，我们使用作用域运算符来提取一个类型的成员——例如，`map<string,int>::key_type`
+
+只有 `map` 类型（`unordered_map`、`unordered_multimap`、`multimap` 和 `map`）才定义了 `mapped_type`。
+
 ### 11.3.1 关联容器迭代器
+
+当解引用一个关联容器迭代器时，我们会得到一个类型为容器的 `value_type` 的值的引用。
+对 `map` 而言，`value_type` 是一个 `pair` 类型．其 `first` 成员保存 `const 的关键字，`second` 成员保存值：
+
+```cpp
+// 获得指向 word_count 中的一个元素的迭代器
+auto map_it = word.count.begin();
+// *map_it 是指向一个 pair<const string, size_t> 对象的引用
+cout << map_it->first;          // 打印此元素的关键字
+cout << " " << map_it->second;  // 打印此元素的值
+map_it->first = "new key";      // 错误：关键字是 const 的
+++ map_it->second;      // 正确：我们可以通过迭代器改变元素
+```
+
+Note：必须记住，一个 `map` 的 `value_type` 是一个 `pair`，我们可以改变 `pair` 的值，但不能改变关键字成员的值。
+
+#### `set` 的迭代器是 const 的
+
+虽然 `set` 类型同时定义了 `iterator` 和 `const_iterator` 类型，但两种类型都只允许只读访问 `set` 中的元素。可以用一个 `set` 迭代器来读取元素的值，但不能修改：
+
+```cpp
+set<int> iset = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+set<int>::iterator set_it = iset.begin();
+if (set_it != iset.end()) {
+    *set_it = 42;            // 错误：set 中的关键字是只读的
+    cout << *set_it << endl; // 正确：可以读关键字
+}
+```
+
+#### 遍历关联容器
+
+`map` 和 `set` 类型都支持 `begin` 和 `end` 操作。我们可以编写一个循环来打印P375中的单词计数程序的结果：
+
+```cpp
+// 获得一个指向首元素的迭代器
+auto map_it = word.count.cbegin();
+// 比较当前迭代器和尾后迭代器
+while (map_it != word_count.cend()) {
+    // 解引用迭代器，打印键值对
+    cout << map_it->first << " occurs " << map_it->second << " times" << endl;
+    ++ map_it; // 递增迭代器，移动到下一个元素
+}
+```
+
+理解 `map` 的迭代器：这里 `map_it` 的类型是 `pair<const string, size_t>::iterator`。
+
+#### 关联容器与算法
+
+在实际编程中，如果我们真要对个关联容器使用算法，要么是将它当作一个源序列， 要么当作个目的位置。
+例如可以用泛型 `copy` 算法将元素从一个关联容器拷贝到另一 个序列。
+类似的，可以调用 `inserter` 将一个插入器绑定（参见10.4.1节，第358页） 到一个关联容器。
+通过使用 `inserter`,我们可以将关联容器当作一个目的位置来调用另一个算法。
+
+**练习11.17：假定 `c` 是一个 `string` 的 `multiset`，`v` 是一个 `string` 的 `vector`, 解释下面的调用。指出每个调用是否合法：**
+
+```cpp
+copy(v.begin(), v.end(), inserter(c, c.end()));
+copy(v.begin(), v.end(), back_inserter(c));
+copy(c.begin(), c.end(), inserter(v, v.end()));
+copy(c.begin(), c.end(), back_inserter(v));
+```
+
+解答：`set` 的迭代器是 const 的，因此只允许访问 `set` 中的元素，而不能改变 `set`。
+与 `map` 一样，`set` 的关键字也是 `const`，因此也不能通过迭代器来改变 `set` 中元素的值。
+因此，前两个调用试图将 `vector` 中的元素复制到 `set` 中，是非法的。
+而后两个调用将 `set` 中的元素复制到 `vector` 中，是合法的。
+
+**练习11.19：定义一个变量，通过对11.2.2节（第378页）中的名为 `bookstore` 的 `multiset` 调用 `begin()`来初始化这个变量。写出变量的类型，不要使用 `auto` 或 `decltype`。**
+
+解答：关联容器的迭代器。
+
+```cpp
+typedef bool (*pf) (const Sales_data &, const Sales_data &);
+multiset<Sales_data, pf> bookstore(compareIsbn);
+...
+pair<const Sales_data, pf>::iterator it = bookstore.begin();
+```
 
 ### 11.3.2 添加元素
 
+`insert` 有两个版本，分别接受一对迭代器，或是一个初始化器列表。
+
+```cpp
+vector<int> ivec = {2, 4, 6, 8, 2, 4, 6, 8};    // ivec 有 8 个元素
+set<int> set2;  // 空集合
+set2.insert(ivec.cbegin(), ivec.cend());    // set2 有 4 个元素
+set2.insert({1, 3, 5, 7, 1, 3, 5, 7});      // set2 现在有 8 个元素
+```
+
+#### 向 `map` 添加元素
+
+对一个 `map` 进行 `insert` 操作时，必须记住元素类型是 `pair`。通常，对于想要插入的数据，并没有一个现成的 `pair` 对象。可以在 `insert` 的参数列表中创建一个 `pair`：
+
+```cpp
+// 向 word_count 插入 word 的 4 种方法
+word_count.insert({word, 1});
+word_count.insert(make_pair(word, 1));
+word_count.isnert(pair<string, size_t>(word, 1));
+word_count.insert(map<string, size_t>::value_type(word, 1));
+```
+
+创建一个 `pair` 最简单的方法是在参数列表中使用**花括号**初始化。也可以调用 `make_pair` 或显式构造 `pair`。最后一个 `insert` 调用中的参数：`map<string, size_t>::value_type(s, 1)`
+构造一个恰当的 `pair` 类型，井构造该类型的一个新对象，插入到 `map` 中。
+
+| 表11.4：             | 关联容器 `insert` 操作                                       |
+| -------------------- | ------------------------------------------------------------ |
+| `c.insert(v)`        | `v` 是 `value_type` 类型的对象：`args` 用来构造一个元素      |
+| `c.emplace(args)`    | 对于 `map` 和 `set`，只有当元素的关键字不在 `c` 中时才插入（或构造）元素。函数返回一个 `pair`，包含一个迭代器，指向具有指定关键字的元素，以及一个指示插入是否成功的 `bool`值。对于 `multimap` 和 `multiset`，总会插入（或构造）给定元素，并返回个指向新元素的迭代器。 |
+| `c.insert(b, e)`     | `b` 和 `e` 是迭代器，表示一个 `c:: value_ type` 类型值的范围； |
+| `c.insert(il)`       | `il` 是这种值的花括号列表                                    |
+|                      | 对于 `map` 和 `set`，只插入关键字不在 `c` 中的元素。对于 `multimap` 和 `multiset`，则会插入范围中的每个元素。 |
+| `c.insert(p, v)`     | 类似 `insert(v)`（或`emplace(args))`,但将迭代器 `p` 作为一个提示，指出从哪里开始搜索新元素应该存储的位置。返回一个迭代器，指向具有给定关键字的元素。 |
+| `c.emplace(p, args)` |                                                              |
+
+#### 检测 `insert` 的返回值
+
+`insert`（或 `emplace`）返回的值依赖于容器类型和参数。
+对于不包含重复关键字的容器，添加单一元素的 `insert` 和`emplace` 版本返回一个 `pair`，告诉我们插入操作是否成功。
+`pair` 的 `first` 成员是一个迭代器，指向具有给定关键字的元素；`second` 成员是一个 `bool` 值，指出元素是插入成功还是已经存在于容器中。
+如果关键字己在容器中 则 `insert` 什么事情也不做，且返问值中的 `bool` 部分为 `false`。如果关键字不存在，元素被插入容器中，且 `bool` 值为 `true`。
+
+```cpp
+// 统计每个单词在输入中出现次数的一种更繁琐的方法
+map<string, size_t> word_count; // 从 strig 到 size_t 的空 map
+string word;
+while (cin >> word) {
+    // 插入一个元素，关键字等于 word，值为 1；
+    // 若 word 已在 word_count 中，insert 什么也不做
+    auto ret = word_count.insert({word, 1}); //ret是一个pair类型 {迭代器, bool值(插入成功还是已存在)}
+    if (!ret.second)    //word已在 word_count 中（元素插入不成功，已存在）
+        ++ ret.first->second;   // 递增计数器，指的是 ++size_t
+}
+```
+
+#### 展开递增语句
+
+```cpp
+ret         // 保存 insert 返回的值，是一个 pair
+ret.first   // 是 pair 的第一个成员，是一个 map 迭代器，指向具有给定关键字的元素
+ret.first-> // 解引用此迭代器，提取 map 中的元素，元素也是一个 pair
+ret.first->second   // map 中元素的值部分
+++ ret.first->second    // 递增此值
+```
+
+旧版本的 `ret` 的声明和初始化写法：
+
+```cpp
+pair<map<string, size_t>::iterator, bool> ret = word_count.insert(make_pair(word, 1));
+```
+
+这条语句定义了一个 `pair`，其第二个类型为 `bool` 类型。第一个类型理解起来有点困难，它是一个在 `map<string, size_t>` 类型上定义的 `iterator` 类型。
+
+#### 向 `multiset` 或 `multimap` 添加元素
+
+对允许重复关键字的容器，接受单个元素的 `insert` 操作返回一个指向新元素的迭代器。这里无须返回一个 `bool` 值，因为 `insert` 总是向这类容器中加入一个新元素。
+
+```cpp
+multimap<string, string> authors;
+// 插入第一个元素，关键字为 Barth, John
+authors.insert({"Barth, John", "Sot-Weed Factor"});
+// 正确：添加第二个元素，关键字也是 Barth, John
+authors.insert({"Barth, John", "Lost in the Funhouse"});
+```
+
+**练习11.20：重写11.1节练习（第376页）的单词计数程序，使用 `insert` 代替下标操作。你认为哪个程序更容易编写和阅读？解释原因。**
+
+解答：
+
+- 使用 `insert` 操作的方式是：构造一个 `pair(单词, 1)`，用 `insert` 将其插入容器，返回一个 `pair`。若单词已存在，则返回 `pair` 的 `second` 成员为 `false`，表示 插入失败，程序员还需通过返回 `pair` 的 `first` 成员（迭代器）递增己有单词的计数器。判断单词是否已存在，并进行相应操作的工作完全是由程序员负责的。
+
+- 使用**下标**操作的方式是：以单词作为下标获取元素值，若单词已存在，则提取出己有元素的值；否则，下标操作将 `pair(单词, 0)`插入容器，提取出新元素的值。单词是否己存在的相关处理完全是由下标操作处理的，程序员不必关心，直接访问提取出的值就行了。
+
+**下标操作**：
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <map>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+
+    map<string, size_t> word_count; // string 到 count 的映射
+    string word;
+    while (in >> word)
+        ++ word_count[word];        // 这个单词的出现次数加 1
+
+    for (const auto& w: word_count) // 对 map 中的每个元素
+        cout << w.first << "appears " << w.second << "times." << endl;
+    
+    return 0;
+}
+```
+
+**`insert`代替下标操作**：
+
+```cpp
+    map<string, size_t> word_count; // string 到 count 的映射
+    string word;
+    while (in >> word) {
+        auto ret = word_count.insert({word, 1}); // 插入单词，次数为 1
+        if (!ret.second)            // 插入失败，单词已存在
+            ++ret.first->second;    // 已有单词的出现次数加 1
+    }
+
+    for (const auto& w : word_count) // 对 map 中的每个元素
+        cout << w.first << "appears " << w.second << " times" << endl;
+
+    return 0;
+```
+
+**练习11.21：假定 `word_count` 是一个 `string` 到 `size_t` 的 `map`，`word` 是一个 `string`，解释下面循环的作用：**
+
+```cpp
+while (cin >> word)
+    ++word_count.insert({word, 0}).first->second;
+```
+
+解答：循环不断从标准输入读入单词（字符串），直至遇到文件结束或错误。
+
+每读入一个单词，构造 `pair {word, 0}`，通过 `insert` 操作插入到 `word_count` 中。`insert` 返回一个 `pair`，其 `first` 成员是一个迭代器。若单词（关键字）己存在于容器中，它指向已有元素；否则，它指向新插入的元素。
+
+因此，`.first` 会得到这个迭代器，指向 `word` 对应的元素。继续使用 `->second`, 可获得元素的值的引用，即单词的计数。若单词是新的，则其值为 `0`，若己存在，则值为之前出现的次数。对其进行递增操作，即完成将出现次数加 `1`。
+
+用这种方法，上一题可稍微简单些。
+
 ### 11.3.3 删除元素
+
+三个版本的 `erase`：
+
+- 传递给 `erase` 一个迭代器
+- 传递给 `erase` 一个迭代器对来删除一个元素或者一个元素范围
+    （上面两个版本的 `erase`，指定的元素被删除，函数返回 `void`。）
+- 额外的 `erase` 操作：接受一个 `key_type` 参数
+
+```cpp
+// 删除一个关键字，返回删除的元素数量
+if (word_count.erase(removal_word))
+    cout << "ok: " << removal_word << " removed\n";
+else cout << "oops: " << removal_word << " not found!\n";
+```
+
+对于保存不重复关键字的容器，`erase` 的返回值总是 `0` 或 `1`。若返回值为 `0`，则表明想要删除的元素并不在容器中。
+
+对允许重复关键字的容器如 `multimap`，删除元素的数量可能大于 `1`。
+
+| 表11.5：        | 从关联容器删除元素                                           |
+| --------------- | ------------------------------------------------------------ |
+| `c.erase(k)`    | 从 `c` 中删除每个关键字为 `k` 的元素。返回一个 `size_type` 值，指出删除的元素的数量 |
+| `c.erase(p)`    | 从 `c` 中删除迭代器 `p` 指定的元素。`p` 必须指向 `c` 中一个真实元素，不能等于 `c.end()`。返回一个指向 `p` 之后元素的迭代器，若 `p` 指向 `c` 中的尾元素，则返回 `c.end()` |
+| `c.erase(b, e)` | 删除迭代器对 `b` 和 `e` 所表示的范围中的元素。返回 `e`       |
 
 ### 11.3.4 map的下标操作
 
+`map` 和 `unordered_map` 容器提供了下标运算符和一个对应的 `at` 函数。
+
+(`at` 成员函数类似下标运算符，但如果下标越界，`at` 会抛出一个 `out_of_range` 异常。)
+
+**Note**: 对一个 `map` 使用下标操作，其行为与数组或 `vector` 上的下标操作很不相同：使用一个不再容器中的关键字作为下标，会添加一个具有此关键字的元素到 `map` 中。
+
+| 表11.6：  | `map` 和 `unordered_map` 的下标操作                          |
+| --------- | ------------------------------------------------------------ |
+| `c[k]`    | 返回关键字为 `k` 的元素； 如果 `k` 不在 `c` 中，添加一个关键字为 `k` 的元素，对其进行值初始化 |
+| `c.at(k)` | 访问关键字为 `k` 的元素，带参数检查；若 `k` 不在 `c` 中，抛出一个 `out_of_range` 异常 |
+
+#### 使用下标操作的返回值
+
+**Note**：与 `vector` 与 `string` 不同，`map` 的下标运算符返回的类型鱼解引用 `map` 迭代器得到的类型不同。
+
+如果关键字还未在 `map` 中，下标运算符会添加一个新元素，这特性允许我们编写出异常简洁的程序，例如单词计数程序中的循环。
+
+另一方面，有时只是想知道一个元素是否已在 `map` 中，但在不存在时并不想添加元素．在这种情况下，就不能使用下标运算符。
+
+**练习11.24：下面的程序完成什么功能？**
+
+```cpp
+map<int, int> m;
+m[0] = 1;
+```
+
+解答：`map` 的下标操作。若 `m` 中己有关键字 `0`，下标操作提取出其值，赋值语句将值置为`1`。
+否则，下标操作会创建一个 `pair(0, 0)`，即关键字为 `0`，值为 `0`（值初始化）, 将其插入到 `m` 中，然后提取其值，赋值语句将值置为 `1`。
+
+**练习11.25：对比下面程序与上一题程序。**
+
+```cpp
+vector<int> v;
+v[0] = 1;
+```
+
+解答：理解顺序容器和关联容器下标操作的不同。
+
+对于 `m`，"0" 表示“关键字 `0`”。而对于 `v`，"0" 表示“位置`0`”。
+
+若 `v` 中己有不少于一个元素，即，存在“位置`0`”元素，则下标操作提取出此位置的元素（左值），赋值操作将其置为 `1`。
+
+而 `map` 的元素是 `pair` 类型，下标提取的不是元素，而是元素的第二个成员，即元素的值。
+
+如 `v` 尚为空，则下标提取出的是一个非法左值（下标操作不做范围检查），向其赋值可能导致系统崩溃等严重后果。
+
 ### 11.3.5 访问元素
+
+`find` 和 `count`：
+
+对于不允许重复关键字的容器，`find` 和 `count` 没什么区别；
+
+对于允许重复关键字的容器，`count` 还会统计有多少个元素有相同的关键字。如果不需要计数，最好使用 `find`。
+
+| 表11.7：                       | 在一个关联容器中查找元素的操作                               |
+| ------------------------------ | ------------------------------------------------------------ |
+| `lower_bound` 和 `upper_bound` | 不适用于无序容器。                                           |
+| 下标和 `at` 操作               | 只适用于非 `const` 的 `map` 和 `unordered_map`。             |
+| `c.find(k)`                    | 返回一个迭代器，指向第一个关键字为 `k` 的元素，若 `k` 不在容器中，则返回尾后迭代器 |
+| `c.count(k)`                   | 返回关键字等于 `k` 的元素的数量。对于不允许重复关键字的容器，返回值永远是 `0` 或 `1` |
+| `c.lower_bound(k)`             | 返回一个迭代器，指向第一个关键字不小于 `k` 的元素            |
+| `c.upper_bound(k)`             | 返回一个迭代器，指向第一个关键字大于 `k` 的元素              |
+| `c.equal_range(k)`             | 返回一个迭代器 `pair`，表示关键字等于 `k` 的元素的范围。若 `k` 不存在，`pair` 的两个成员均等于 `c.end()` |
+
+#### 对 `map` 使用 `find` 代替下标操作
+
+对 `map` 和 `unordered_map` 类型，下标运算符提供了最简单的提取元素的方法。但是，使用下标操作有一个严重的副作用：如果关键还未在 `map` 中，下标操作会插入一个具有给定关键字的元素。这种行为是否正确完全依赖于我们的预期是什么。例如，单词计数程序依赖于这样一个特性：使用一个不存在的关键字作为下标，会插入一个新元素，其关键字为给定关键字，其值为 `0`。也就是说，下标操作的行为符合我们的预期。但有时，我们只是想知道一个给定关键字是否在 `map` 中，而不想改变 `map`。这样就不能使用下标运算符来检查个元素是否存在，因为如果关键字不存在的话，下标运算符会插入一个新元素。在这种清况下，应该使用 `find`:
+
+```cpp
+if (words.find("foobar") == words.end())
+    cout << "foobar is not in the map" << endl;
+```
+
+#### 在 multimap 或 multiset 中查找元素
+
+如果一个 `multimap` 或 `multiset` 中有多个元素具有给定关键字，则这些元素在容器中会相邻存储。
+
+例如，给定一个从作者到著作题目的映射，我们可能想打印一个特定作者的所有著作。可以用三种不同方法来解决这个问题。最直观的方法是使用 `find` 和 `count`：
+
+```cpp
+// 调用 count 确定此作者共有多少本著作，并调用 find 获得一个迭代器，指向第一个关键字为此作者的元素
+string search_item("Alain de Botton");      // 要查找的作者
+auto entries = authors.count(search_item);  // 元素的数量
+auto iter = authors.find(search_item);      // 此作者第一本书
+
+while (entries) {
+    cout << iter->second << endl;   // 打印每个题目
+    ++iter;
+    --entries;
+}
+```
+
+#### 一种不同的，面向迭代器的解决方法
+
+- `lower_bound` 返回的迭代器将指向第一个具有给定关键字的元素
+- `upper_bound` 返回的迭代器指向最后一个匹配给定关键字的元素之后的位置
+
+使用这两个操作，我们可以重写前面的程序：
+
+```cpp
+// authors 和 search_item 的定义，与前面的程序一样
+// beg 和 end 表示对应此作者的元素的范围
+for (auto beg = authors.lower_bound(search_item),
+     end = authors.upper_bound(search_item);
+     beg != end; ++ beg)
+    cout << beg->second << endl;    // 打印每个题目
+```
+
+此程序与使用 `count` 和 `find` 的版本完成相同的工作，但更直接。它们的返回值可作为一个迭代器范围。
+
+Note：如果 `lower_bound` 和 `upper_bound` 返回相同的迭代器，则给定关键字不在容器中。
+
+#### `equal_range` 函数
+
+此函数接受一个关键字，返回一个迭代器 `pair`。
+若关键字存在，则第一个迭代器指向第一个与关键字匹配的元素，第二个迭代器指向最后一个匹配元素之后的位置。
+若未找到匹配元素，则两个迭代器都指向关键字可以插入的位置。
+
+可以用 `equal_range` 来再次修改我们的程序：
+
+```cpp
+// authors 和 search_item 的定义，与前面的程序一样
+// pos 保存迭代器对，表示与关键字匹配的元素范围
+for (auto pos = authors.equal_range(search_item);
+     pos.first != pos.second;
+     ++ pos.first)
+    cout << pos.first->second << endl; // 打印每个题目
+```
+
+**解释运算对象 `pos.first->second` 的含义**：
+
+`equal_range` 返回一个 `pair`，其 `first` 成员与 `lower_bound` 的返回结果相同，即指向容器中第一个具有给定关键字的元素。因此，对其解引用会得到一个 `value_type` 对象，即一个 `pair`，其 `first` 为元素的关键字，即给定关键字，而 `second` 为关键字关联的值。在本例中，关键字为作者，关联的值为著作的题目。因此，`pos.first->second` 即获得给定作者的第一步著作的题目。
+
+此程序本质上与前个使用 `upper_bound` 和 `lower_bound` 的程序是一样的。
+不同之处就是，没有用局部变量 `beg` 和 `end` 来保存元素范围，而是使用了 `equal_range` 返回的 `pair`。
+此 `pair` 的 `first` 成员保存的迭代器与 `lower_bound` 返回的迭代器是一样的， `second` 保存的迭代器与`upper_bound` 的返回值是一样的。
+因此，在此程序中， `pos.first` 等价于 `beg`，`pos.second` 等价于 `end`。
+
+**练习11.29：如果给定的关键字不在容器中，`upper_bound`、`lower_bound`和 `equal_range` 分别会返回什么？**
+
+`lower_bound` 返回第一个具有给定关键字的元素，`upper_bound` 则返回最后一个具有给定关键字的元素之后的位置。
+即，这两个迭代器构成包含所有具有给定关键字的元素的范围。
+若给定关键字不在容器中，两个操作显然应构成一个空范围，它们返回相当的迭代器，指出关键字的正确插入位置——不影响关键字的排序。
+如果给定关键字比容器中所有关键字都大，则此位置是容器的尾后位置 `end`。
+
+`equal_range` 返回一个 `pair`，其 `first` 成员等价于 `lower_bound` 返回的迭代器，`second` 成员等价于 `upper_bound` 返回的迭代器。因此，若给定关键字不在容器中，`first` 和 `second` 都指向关键字的正确插入位置，两个迭代器构成一个空范围。
+
+**练习11.31：编写程序，定义一个作者及其作品的 `multimap`。使用 `find` 在 `multimap` 中查找一个元素并用 `erase` 删除它。确保你的程序在元素不在 `map` 中时 也能正常运行。**
+
+将数据插入 `multimap`,需使用 `insert` 操作。
+在 `multimap` 中查找具有给定关键字的元素，有几种方法：
+
+- 使用 `find` 只能查找第一个具有给定关键字的元素，要找到所有具有给定关键字的元素，需编写循环；`lower_bound` 和 `upper_bound` 配合使用，可找到具有给定关键字的元素的范围；`equal_range` 最为简单，一次即可获得要查找的元素范围。
+
+将找到的范围传递给 `erase`，即可删除指定作者的所有著作。
+为了解决元素不在 `multimap` 中的情况，首先检查 `equal_range` 返回的两个迭代器，若相等（空范围），则什么也不做。范围不为空时，才将迭代器传递给 `erase`，删除所有元素。
+
+```cpp
+#include <iostream>
+#include <string>
+#include <map>
+#include <algorithm>
+
+using namespace std;
+
+void remove_authors(multimap<string, string>& books, const string& author)
+{
+    auto pos = books.equal_range(author);   // 查找给定作者范围
+    if (pos.first == pos.second)            // 空范围，没有该作者
+        cout << "This author " << author << " doesn't exist." << endl << endl;
+    else
+        books.erase(pos.first, pos.second); // 删除该作者所有著作
+}
+
+void print_books(multimap<string, string>& books)
+{
+    cout << "The current books include: " << endl;
+    for (auto& book : books)                // 遍历所有书籍，打印之
+        cout << book.first << ", <<" << book.second << ">> " << endl;
+    cout << endl;
+}
+
+int main(int argc, char* argv[])
+{
+    multimap<string, string> books;
+    books.insert({"Barth, John", "Sot-Weed Factor"});
+    books.insert({"Barth, John", "Lost in the Funhouse"});
+    books.insert({"Jin Yong", "She Diao Yin Xiong Zhuan"});
+    books.insert({"Jin Yong", "Tian Long Ba Bu"});
+
+    print_books(books);
+    remove_authors(books, "Zhang San");
+    remove_authors(books, "Barth, John");
+    print_books(books);
+
+    return 0;
+}
+```
+
+**练习11.32：使用上一题定义的 `muitimap` 编写一个程序，按字典序打印作者列表和他们的作品。**
+
+【出题思路】本题要求理解 `multimap` 数据结构中关键字的顺序，以及利用它来实现关键字的有序输出。
+【解答】 `multimap` 的数据结构是红黑树，它维护了元素的关键字的默认序。例如，对字符串关键字〔作者），红黑树会维护它们的字典序。当我们遍历 `multimap`（如遍历 `[begin(), end())`，或更简单地使用范围 `for` 时），就是按关键字的字典序来访问元素。
+
+因此，上一题的 `print_books` 实际上已经实现了按字典序打印作者列表和他们的作品。
+
+但是，当我们要求的不是关键字的默认序（运算符 `<` 定义的顺序）时，就要复杂一些。由于 `sort` 算法要求给定的两个迭代器是随机迭代器，关联容器的迭代器不符合这要求，所以不能直接对其使用 `sort` 算法。
+其实这不难理解，关联容器的根本特征就是维护了关键字的默认序．从而实现了按关键字的插入、删除和查找。是不可能通过 `sort` 使其内部元素呈现出另外一种顺序的。只有本身不关心元素值的顺序容器，才可能随意安排元素顺序（位置）。
+我们可以在定义 `multimap` 时使用自己定义的比较操作所定义的关键字的序，而不是使用 `<` 定义的序，但这只是令 `muitimap` 以另外一种序来维护关键字，仍然不可能在使用 `muitimap` 的过程中来改变关键字顺序。
+
+为此，我们只能将 `multimap` 中的元素拷贝到一个顺序容器（如 `vector`）中，对顺序容器执行 `sort` 算法，来获得关键字的其他序。
 
 ### 11.3.6 一个单词转换的map
 
+未完待续 (P392)
+
 ## 11.4 无序容器
+
+新标准定义了 4 个 **无序关联容器** (unordered associative container)。
+这些容器不是使用比较运算符来组织元素，而是使用一个哈希函数 (hash function) 和关键字类型的 `==` 运算符。
+
+### 管理桶
+
+无序容器在存储上组织为一组桶，每个桶保存零个或多个元素。无序容器使用一个哈希函数将元素映射到桶。为了访问一个元素，容器首先计算元素的哈希值，它指出应该搜索哪个桶。容器将具有一个特定哈希值的所有元素都保存在相同的桶中。如果容器允许重复关键字，所有具有相同关键字的元素也都会在同一个桶中。因此，无序容器的性能依赖于哈希函数的质量和桶的数量和大小。
+
+对于相同的参数，哈希函数必须总是产生相同的结果。理想情况下，哈希函数还能将每个特定的值映射到唯一的桶。但是，将不同关键字的元素映射到相同的桶也是允许的。当一个桶保存多个元素时，需要顺序搜索这些元素来查找我们想要的那个。计算一个元素的哈希值和在桶中搜索通常都是很快的操作。但是，如果一个桶中保存了很多元素，那么查找一个特定元素就需要大量比较操作。
+
+无序容器提供了一组管理桶的函数。这些成员函数允许我们查询容器的状态以及在必要时强制容器进行重组。
+
+| 表11.8：                   | 无序容器管理操作                                             |
+| -------------------------- | ------------------------------------------------------------ |
+| **桶接口**                 |                                                              |
+| `c.bucket_count()`         | 正在使用的桶的数目                                           |
+| `c.max_bucket_count()`     | 容器能容纳的最多的桶的数量                                   |
+| `c.bucket_size(n)`         | 第 `n` 个桶中有多少个元素                                    |
+| `c.bucket(k)`              | 关键字为 `k` 的元素在哪个桶中                                |
+| **桶迭代**                 |                                                              |
+| `local_iterator`           | 可以用来访问桶中元素的迭代器类型                             |
+| `const_local_iterator`     | 桶迭代器的 `const` 版本                                      |
+| `c.begin(n)`, `c.end(n)`   | 桶 `n` 的首元素迭代器和尾后迭代器                            |
+| `c.cbegin(n)`, `c.cend(n)` | 与前两个函数类似，但返回 `const_local_iterator`              |
+| **哈希策略**               |                                                              |
+| `c.load_factor()`          | 每个桶的平均元素数量，返回 `float` 值                        |
+| `c.max_load_factor()`      | `c` 试图维护的平均桶大小，返回 `float` 值。`c` 会在需要时添加新的桶，以使得 `load_factor <= max_load_factor` |
+| `c.rehash(n)`              | 重组存储，使得 `bucket_count >= n` 且 `bucket_count > size/max_load_factor` |
+| `c.reserve(n)`             | 重组存储，使得 `c` 可以保存 `n` 个元素且不必 `rehash`        |
+
+### 无序容器对关键字类型的要求
+
+未完待续(P396)
