第11章 关联容器

--- a/第11章 关联容器.md
+++ b/第11章 关联容器.md
@@ -1,3 +1,42 @@
+<!-- TOC -->
+
+- [第11章 关联容器](#第11章-关联容器)
+  - [11.1 使用关联容器](#111-使用关联容器)
+    - [使用`map`](#使用map)
+    - [使用`set`](#使用set)
+  - [11.2 关联容器概述](#112-关联容器概述)
+    - [初始化 multimap 或 multiset](#初始化-multimap-或-multiset)
+    - [11.2.1 定义关联容器](#1121-定义关联容器)
+      - [初始化 multimap 或 multiset](#初始化-multimap-或-multiset-1)
+    - [11.2.2 关键字类型的要求](#1122-关键字类型的要求)
+      - [使用关键字类型的比较函数](#使用关键字类型的比较函数)
+    - [11.2.3 pair类型](#1123-pair类型)
+      - [创建 `pair` 对象的函数](#创建-pair-对象的函数)
+  - [11.3 关联容器操作](#113-关联容器操作)
+    - [11.3.1 关联容器迭代器](#1131-关联容器迭代器)
+      - [`set` 的迭代器是 const 的](#set-的迭代器是-const-的)
+      - [遍历关联容器](#遍历关联容器)
+      - [关联容器与算法](#关联容器与算法)
+    - [11.3.2 添加元素](#1132-添加元素)
+      - [向 `map` 添加元素](#向-map-添加元素)
+      - [检测 `insert` 的返回值](#检测-insert-的返回值)
+      - [展开递增语句](#展开递增语句)
+      - [向 `multiset` 或 `multimap` 添加元素](#向-multiset-或-multimap-添加元素)
+    - [11.3.3 删除元素](#1133-删除元素)
+    - [11.3.4 map的下标操作](#1134-map的下标操作)
+      - [使用下标操作的返回值](#使用下标操作的返回值)
+    - [11.3.5 访问元素](#1135-访问元素)
+      - [对 `map` 使用 `find` 代替下标操作](#对-map-使用-find-代替下标操作)
+      - [在 multimap 或 multiset 中查找元素](#在-multimap-或-multiset-中查找元素)
+      - [一种不同的，面向迭代器的解决方法](#一种不同的面向迭代器的解决方法)
+      - [`equal_range` 函数](#equal_range-函数)
+    - [11.3.6 一个单词转换的map](#1136-一个单词转换的map)
+  - [11.4 无序容器](#114-无序容器)
+    - [管理桶](#管理桶)
+    - [无序容器对关键字类型的要求](#无序容器对关键字类型的要求)
+
+<!-- /TOC -->
+
 # 第11章 关联容器
 
 关联容器支持高效的关键字查找和访问。两个主要的关联容器(associative-container) 类型是`map`和`set`。
